--- a/project/description
+++ b/project/description
@@ -1,1 +1,5 @@
-Unnamed repository; edit this file 'description' to name the repository.
+Simulations of 
+-First Come First Serve
+-First In First Out
+-Least Recently Used
+-Shortest Job First
